--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,11 +1,11 @@
 #=======================================================
-#Config Version: 3.4(Don't change this version)
+#Config Version: 3.5.2(Don't change this version)
 #=======================================================
-#Plugin Made By: Zachstyles 
+#Plugin Made By: Refrac 
 #=======================================================
 #Original Author: BGHDDevelopment
 #=======================================================
-#Plugin Page: https://www.spigotmc.org/resources/ultimatestaffmode-1-8-1-12.54528/
+#Plugin Page: https://www.spigotmc.org/resources/54528/
 #=======================================================
 #Permssion: ustaffmode.update
 Update:
