--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -1,7 +1,7 @@
 #=======================================================
-#Config Version: 3.5.2(Don't change this version)
+#Config Version: 3.5.2(Please Don't change this version)
 #=======================================================
-#Plugin Made By: Refrac 
+#Plugin Author: Refrac 
 #=======================================================
 #Original Author: BGHDDevelopment
 #=======================================================
